--- a/20220531_unroll.ipynb
+++ b/20220531_unroll.ipynb
@@ -36,8 +36,8 @@
       },
       "outputs": [],
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount(\"/content/drive\")"
+        "#from google.colab import drive\n",
+        "#drive.mount(\"/content/drive\")"
       ]
     },
     {
@@ -327,6 +327,18 @@
         "\n",
         "        self.criterion = nn.BCEWithLogitsLoss(reduction=\"mean\")\n",
         "\n",
+        "    def generate(self,batch_size):\n",
+        "        with torch.no_grad():\n",
+        "          input_z = torch.randn(batch_size, self.z_dim, 1, 1).to(self.device)\n",
+        "          fake_images = self.G(input_z)      \n",
+        "        return fake_images\n",
+        "\n",
+        "    def init_unroll_GAN(self, batch_size):\n",
+        "        self.nRoll = 10\n",
+        "        self.nBuffer = 11\n",
+        "        self.old_fake_images = [self.generate(batch_size) for i in range(self.nBuffer)]\n",
+        "        self.current_idx = 0\n",
+        "\n",
         "    def train(self, dataloader, num_epochs):\n",
         "        num_images = len(dataloader.dataset)\n",
         "        self.batch_size = dataloader.batch_size\n",
@@ -334,6 +346,10 @@
         "\n",
         "        pbar_epoch = tqdm(total=num_epochs)\n",
         "        pbar_epoch.set_description(\"epoch\")\n",
+        "        self.G.train()\n",
+        "        self.D.train()\n",
+        "        self.init_unroll_GAN(self.batch_size)\n",
+        "\n",
         "        for epoch in range(num_epochs):\n",
         "            epoch_d_loss = 0\n",
         "            epoch_g_loss = 0\n",
@@ -359,7 +375,7 @@
         "                show_images(sample, f\"out{epoch:04d}.png\")\n",
         "\n",
         "    def train_D(self, images, batch_size):\n",
-        "        if batch_size == 1:\n",
+        "        if batch_size != self.batch_size:\n",
         "            return 0\n",
         "        self.D.zero_grad()\n",
         "\n",
@@ -368,9 +384,9 @@
         "        label_fake = torch.full((batch_size,), 1.0).to(self.device)\n",
         "\n",
         "        d_out_real = self.D(images)\n",
-        "\n",
-        "        input_z = torch.randn(batch_size, self.z_dim, 1, 1).to(self.device)\n",
-        "        fake_images = self.G(input_z)\n",
+        "        \n",
+        "        #fake_images = self.generate(batch_size)\n",
+        "        fake_images = self.old_fake_images[self.current_idx]\n",
         "        d_out_fake = self.D(fake_images)\n",
         "\n",
         "        d_loss_real = self.criterion(d_out_real.view(-1), label_real)\n",
@@ -383,14 +399,18 @@
         "        return d_loss.item()\n",
         "\n",
         "    def train_G(self, batch_size):\n",
-        "        if batch_size == 1:\n",
+        "        if batch_size != self.batch_size:\n",
         "            return 0\n",
         "        self.G.zero_grad()\n",
         "\n",
         "        label_real = torch.full((batch_size,), 0.0).to(self.device)\n",
         "\n",
+        "        \n",
+        "        self.old_fake_images[(self.current_idx + self.nRoll) % self.nBuffer] = self.generate(batch_size)\n",
+        "        self.current_idx = (self.current_idx + 1) % self.nBuffer\n",
+        "\n",
         "        input_z = torch.randn(batch_size, self.z_dim, 1, 1).to(self.device)\n",
-        "        fake_images = self.G(input_z)\n",
+        "        fake_images = self.G(input_z)   \n",
         "        d_out_fake = self.D(fake_images)\n",
         "\n",
         "        g_loss = self.criterion(d_out_fake.view(-1), label_real)\n",
@@ -464,9 +484,9 @@
       "hash": "266e07f64aa3f1afd9991a0b824d04fa241a0ccb3b0a1eb69e96cbe416527717"
     },
     "kernelspec": {
-      "display_name": "Python 3.9.7 ('myenv')",
+      "display_name": "myenv",
       "language": "python",
-      "name": "python3"
+      "name": "myenv"
     },
     "language_info": {
       "codemirror_mode": {
