--- a/20220531_unroll.ipynb
+++ b/20220531_unroll.ipynb
@@ -36,8 +36,8 @@
       },
       "outputs": [],
       "source": [
-        "#from google.colab import drive\n",
-        "#drive.mount(\"/content/drive\")"
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/drive\")"
       ]
     },
     {
