--- a/20220531_unroll.ipynb
+++ b/20220531_unroll.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/iiyama-lab/semi_tutorial/blob/main/20220531.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/iiyama-lab/semi_tutorial/blob/main/20220531_unroll.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,7 +37,8 @@
       "outputs": [],
       "source": [
         "from google.colab import drive\n",
-        "drive.mount(\"/content/drive\")"
+        "drive.mount(\"/content/drive\")\n",
+        "!pwd"
       ]
     },
     {
@@ -484,9 +485,9 @@
       "hash": "266e07f64aa3f1afd9991a0b824d04fa241a0ccb3b0a1eb69e96cbe416527717"
     },
     "kernelspec": {
-      "display_name": "myenv",
+      "display_name": "Python 3.9.7 ('myenv')",
       "language": "python",
-      "name": "myenv"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
