--- a/20220614.ipynb
+++ b/20220614.ipynb
@@ -13,6 +13,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 0.　ドライブのマウント"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount(\"/content/drive\")\n",
+    "!pwd\n",
+    "\n",
+    "datadir = \"/content/drive/MyDrive/iiyama-lab2022/data/face/train\"\n",
+    "val_datadir = \"/content/drive/MyDrive/iiyama-lab2022/data/face/test\"\n",
+    "#datadir = \"/root/data/share/face/train\"\n",
+    "#val_datadir = \"/root/data/share/face/test\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. いろいろインポート"
    ]
   },
@@ -125,7 +148,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from pylab import cm\n",
-    "dataset = ColorizationImageDataset(\"/root/data/share/face/train\", transform=ImageTransform())\n",
+    "dataset = ColorizationImageDataset(datadir, transform=ImageTransform())\n",
     "dataloader = torch.utils.data.DataLoader(\n",
     "    dataset, batch_size=10, shuffle=True\n",
     ")\n",
@@ -305,11 +328,11 @@
     "device = \"cuda:1\" if torch.cuda.is_available() else \"cpu\"\n",
     "batch_size = 32\n",
     "\n",
-    "dataset = ColorizationImageDataset(\"/root/data/share/face/train\", transform=ImageTransform())\n",
+    "dataset = ColorizationImageDataset(datadir, transform=ImageTransform())\n",
     "dataloader = torch.utils.data.DataLoader(\n",
     "    dataset, batch_size=batch_size, shuffle=True, num_workers=4\n",
     ")\n",
-    "val_dataset = ColorizationImageDataset(\"/root/data/share/face/test\", transform=ImageTransform())\n",
+    "val_dataset = ColorizationImageDataset(val_datadir, transform=ImageTransform())\n",
     "val_dataloader = torch.utils.data.DataLoader(\n",
     "    val_dataset, batch_size=batch_size, shuffle=False,  num_workers=4\n",
     ")"
