for google colab

--- a/20220614.ipynb
+++ b/20220614.ipynb
@@ -22,14 +22,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from google.colab import drive\n",
-    "#drive.mount(\"/content/drive\")\n",
+    "from google.colab import drive\n",
+    "drive.mount(\"/content/drive\")\n",
     "!pwd\n",
     "\n",
-    "#datadir = \"/content/drive/MyDrive/iiyama-lab2022/data/face/train\"\n",
-    "#val_datadir = \"/content/drive/MyDrive/iiyama-lab2022/data/face/test\"\n",
-    "datadir = \"/root/data/share/face/train\"\n",
-    "val_datadir = \"/root/data/share/face/test\""
+    "datadir = \"/content/drive/MyDrive/iiyama-lab2022/data/face/train\"\n",
+    "val_datadir = \"/content/drive/MyDrive/iiyama-lab2022/data/face/test\"\n",
+    "#datadir = \"/root/data/share/face/train\"\n",
+    "#val_datadir = \"/root/data/share/face/test\""
    ]
   },
   {
