--- a/20220614.ipynb
+++ b/20220614.ipynb
@@ -395,6 +395,7 @@
     "        gray_images = gray_images.to(device)\n",
     "        rgb_images = rgb_images.to(device)\n",
     "\n",
+    "        model.zero_grad()\n",
     "        out = model(gray_images)\n",
     "        loss = criterion(out, rgb_images)\n",
     "        loss.backward()\n",
@@ -417,6 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@torch.no_grad()\n",
     "def validation(dataloader):\n",
     "    \"\"\"\n",
     "    検証部分。中身はほぼtrainと同じ\n",
@@ -567,8 +569,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!curl https://researchmap.jp/masaakiiiyama/avatar.jpg -o sample.png\n",
-    "!curl https://www.iiyama-lab.org/static/cf450c1cdd8f3a93e9ec1c816db1c39b/c58a3/MasaakiIiyama2020.jpg -o sample.jpg\n",
+    "!curl https://researchmap.jp/masaakiiiyama/avatar.jpg -o sample.jpg\n",
+    "#!curl https://www.iiyama-lab.org/static/cf450c1cdd8f3a93e9ec1c816db1c39b/c58a3/MasaakiIiyama2020.jpg -o sample.jpg\n",
     "#!curl https://upload.wikimedia.org/wikipedia/commons/0/06/Shiga_University_Auditorium_%28Nationally_Registered_Tangible_Cultural_Property%29_at_Headquarter_in_Hikone_and_Headquarter_Building.jpg -o sample.jpg\n",
     "#!curl https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Shiga-Univ-Otsu-Entrance-2016081701.jpg/1280px-Shiga-Univ-Otsu-Entrance-2016081701.jpg -o sample.jpg\n",
     "filename = 'sample.jpg'\n",
