--- a/20220621.ipynb
+++ b/20220621.ipynb
@@ -22,16 +22,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from google.colab import drive\n",
-    "#drive.mount(\"/content/drive\")\n",
+    "from google.colab import drive\n",
+    "drive.mount(\"/content/drive\")\n",
     "!pwd\n",
     "\n",
-    "#datadir = \"/content/drive/MyDrive/iiyama-lab2022/data/face/train\"\n",
-    "#val_datadir = \"/content/drive/MyDrive/iiyama-lab2022/data/face/test\"\n",
-    "datadir = \"/root/data/share/face/train\"\n",
-    "val_datadir = \"/root/data/share/face/test\"\n",
+    "datadir = \"/content/drive/MyDrive/iiyama-lab2022/data/face/train\"\n",
+    "val_datadir = \"/content/drive/MyDrive/iiyama-lab2022/data/face/test\"\n",
+    "#datadir = \"/root/data/share/face/train\"\n",
+    "#val_datadir = \"/root/data/share/face/test\"\n",
     "\n",
-    "num_workers = 4"
+    "num_workers = 2"
    ]
   },
   {
